[gd_scene load_steps=4 format=3 uid="uid://dihle2hwbplxu"]

[ext_resource type="Script" path="res://scenes/objects/pickable_items/equipment/consumable/bomb/bomb.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c4cyksqrscr1n" path="res://scenes/effects/explosion/explosions.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/objects/pickable_items/equipment/consumable/_consumable_item.tscn" id="3"]

[node name="BombItem" instance=ExtResource("3")]
mass = 0.5
script = ExtResource("1")
radius = 5
bomb_damage = 0.0
damage_type = 0
item_name = "Bomb"
can_spin = true

[node name="Explosion" parent="." index="3" instance=ExtResource("2")]
transform = Transform3D(-8.74228e-08, -2, 0, 2, -8.74228e-08, 0, 0, 0, 2, 0, 0, 0)
amount = 40

[node name="Flash" type="OmniLight3D" parent="." index="5"]
visible = false
light_color = Color(0.760784, 0.364706, 0.0470588, 1)
light_energy = 5.0
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 7.0

[node name="FlashTimer" type="Timer" parent="Flash" index="0"]
wait_time = 0.05
one_shot = true

[connection signal="item_state_changed" from="." to="." method="_on_item_state_changed"]
[connection signal="timeout" from="Flash/FlashTimer" to="." method="_on_flash_timer_timeout"]
